components/centraldashboard-angular/manifests/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: centraldashboard-angular
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /
    rewrite:
      uri: /
    route:
    - destination:
        # host: service.namespace.svc.clusterDomain — index 1 and 3 filled by replacements
        host: centraldashboard-angular.placeholder.svc.placeholder
        port:
          number: 80
